package br.edu.acad.ifma.notification.domain;

public enum NotificationStatus {
    PENDING, SENT, DELIVERED, FAILED
}
